# redacteval

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  design.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.ipynb
src/redacteval/: __init__.py  demo.py  evaluator.py  reporting.py
tests/: test_demo_data.py  test_evaluator_matching.py  test_evaluator_results.py  test_input_coercion.py  test_reporting.py  test_sentence_segmentation.py
