[project]
name = "redacteval"
version = "0.0.1"
description = "Evaluation and diagnostics toolkit for text redaction quality."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pandas>=2.3.3",
    "pytest>=9.1.1",
]
